--- a/anchor elements/index.html
+++ b/anchor elements/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>My top Favourite Websites</h1>
-  <ol>
+  <ol type="a">
     <li><a href="https://www.youtube.com">Youtube</a></li>
     <li><a href="https://www.wikipedia.com">Wikipedia</a></li>
     <li><a href="https://www.codewithharry.com">CodewithHarry</a></li>
