--- a/project 2/index.html
+++ b/project 2/index.html
@@ -19,7 +19,7 @@
     <li>An appetite(There will be lots of food)</li>
   </ul>
   <h3>This is where you need to come:</h3>
-  <a href="https://maps.app.goo.gl/aAbyZUAPE4oFK77M6">Google Maps Link</a>
+  <a href="https://maps.app.goo.gl/GT2H3Mm4mzwEYqF6A">Google Maps Link</a>
 </body>
 
 </html>
